k8/mern-ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: mern-ingress
#   namespace: mern-app
#   labels:
#     name: fintrack-ingress
# spec:
#   rules:
#     - host: localhost
#       http:
#         paths:
#           - path: "/"
#             pathType: Prefix
#             backend:
#               service:
#                 name: frontend-service
#                 port:
#                   number: 80
#           - path: "/api/v1"
#             pathType: Prefix
#             backend:
#               service:
#                 name: backend-service
#                 port:
#                   number: 8080




# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: mern-ingress
#   namespace: mern-app
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /$1
# spec:
#   ingressClassName: nginx
#   rules:
#     - host: localhost
#       http:
#         paths:
#           - path: /(.*)
#             pathType: Prefix
#             backend:
#               service:
#                 name: frontend-service
#                 port:
#                   number: 80

#           - path: /api/v1(/|$)(.*)
#             pathType: Prefix
#             backend:
#               service:
#                 name: backend-service
#                 port:
#                   number: 8080




apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mern-ingress
  namespace: mern-app
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
